# mpsa_beyond_language

./: README.md  news_articles_parsed.csv  prompt.md  pyproject.toml
data/: article_urls.csv  article_urls_1.csv  article_urls_2.csv  paste_2005-05-02_1991_01_01.txt  paste_2013-09-04_2005-05-03.txt  paste_2025-01-01_2013-09-05.txt
data/dict/: frlsd.lc3  frlsd_dict.rds  lexicon_df.rds
data/tmp/: df_lsd_sentiments.rds  news_df_sentiment.rds
data/translation_files/: articles_batch_1.docx  articles_batch_1_translated.docx  articles_batch_2.docx  articles_batch_2_translated.docx  articles_batch_3.docx  articles_batch_3_translated.docx
eureka_articles/1991-01-01_2005-05-13/: article_0002.html  article_0003.html  article_0005.html  article_0015.html  article_0017.html  article_0018.html  article_0019.html  article_0020.html  article_0022.html  article_0024.html  article_0025.html  article_0026.html  article_0027.html  article_0029.html  article_0030.html  article_0031.html  article_0036.html  article_0037.html  article_0038.html  article_0040.html  article_0041.html  article_0042.html  article_0043.html  article_0044.html  article_0046.html  article_0047.html  article_0048.html  article_0051.html  article_0055.html  article_0058.html  article_0060.html  article_0062.html  (+374 more)
src/: 00_eureka_scraper.py  00_eureka_url_extractor.R  01_eureka_html_parser.R  01_parsing.R  02_data_summary.R  10_dataframe_cleaning.R  20_frlsd.R  30_translate_to_english.R  40_lsd_prep.R  41_lsd.R  50_merging_french_english.R  99_parser.R  99x_dict_builder.R  99x_rename_html_files.R
(+2289 files in other folders)
