[project]
name = "beyond-language"
version = "0.1.0"
description = ""
authors = [
    {name = "LaurenceOMFoisy",email = "mail@mfoisy.com"}
]
readme = "README.md"
requires-python = ">=3.11"
package-mode = false
dependencies = [
    "selenium (>=4.29.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "ipython (>=9.0.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
